# std_sin

./: CMakeLists.txt  README.md  sin_lut.cpp
